# copier-py-general

./: README.md  copier.yaml  cspell.json  pyproject.toml
template/: .pre-commit-config.yaml  .python-version.jinja  AGENTS.md.jinja  LICENSE.jinja  README.md.jinja  cspell.json.jinja  noxfile.py  noxfile.py.jinja  pyproject.toml.jinja
template/.github/workflows/: run-checks.yaml  run-checks.yaml.jinja
template/docs/source/: conf.py.jinja  index.md  index.md.jinja
template/docs/source/development/: contributing.md.jinja  development_guide.md.jinja
template/src/{{package_name}}/cli/: main.py
template/src/{{project_name.replace("-", "_")}}/: __init__.py
