[project]
name = "general-copier-template"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rvforest@gmail.com", email = "rvforest@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
